policies/templates/live-template.yaml
apiVersion: templates.gatekeeper.sh/v1
kind: ConstraintTemplate
metadata:
  annotations:
    config.k8s.io/owning-inventory: config-management-system_root-sync
    config.kubernetes.io/origin: |
      path: templates/k8sstorageclass.yaml
    configmanagement.gke.io/cluster-name: il5ssaa-test-ss1-cluster
    configmanagement.gke.io/managed: enabled
    configmanagement.gke.io/source-path: policies/default_templates.gatekeeper.sh_v1_constrainttemplate_k8sstorageclass.yaml
    configmanagement.gke.io/token: e8a3d01bfd185e9d58e77989eabc1d240fa1f1de
    configsync.gke.io/git-context: '{"repo":"https://github.com/DarkWolf-Labs/stellar-engine-gke-policies","branch":"gitops-constraints","rev":"HEAD"}'
    configsync.gke.io/manager: :root
    configsync.gke.io/resource-id: templates.gatekeeper.sh_constrainttemplate_k8sstorageclass
    description: Requires storage classes to be specified when used. Only Gatekeeper
      3.9+ and non-ephemeral containers are supported.
    metadata.gatekeeper.sh/requires-sync-data: |
      "[
        [
          {
            "groups":["storage.k8s.io"],
            "versions": ["v1"],
            "kinds": ["StorageClass"]
          }
        ]
      ]"
    metadata.gatekeeper.sh/title: Storage Class
    metadata.gatekeeper.sh/version: 1.1.2
    policycontroller.configmanagement.gke.io/version: 1.20.3
  creationTimestamp: "2025-05-16T12:54:35Z"
  generation: 1
  labels:
    app.kubernetes.io/managed-by: configmanagement.gke.io
    applyset.kubernetes.io/part-of: applyset-e22zDPwKdkFqCzUzScEvOv2nZZ55DLNRI-wrMTICH94-v1
    configsync.gke.io/declared-version: v1
    policycontroller.configmanagement.gke.io/referential: "true"
  name: k8sstorageclass
  resourceVersion: "1747409082300015005"
  uid: 3e4289a1-a7fe-497b-af9b-530fea989107
spec:
  crd:
    spec:
      names:
        kind: K8sStorageClass
      validation:
        legacySchema: false
        openAPIV3Schema:
          description: Requires storage classes to be specified when used.
          properties:
            allowedStorageClasses:
              description: An optional allow-list of storage classes.  If specified,
                any storage class not in the `allowedStorageClasses` parameter is
                disallowed.
              items:
                type: string
              type: array
            includeStorageClassesInMessage:
              default: true
              type: boolean
          type: object
  targets:
  - rego: |
      package k8sstorageclass

      is_pvc(obj) {
        obj.apiVersion == "v1"
        obj.kind == "PersistentVolumeClaim"
      }

      is_statefulset(obj) {
        obj.apiVersion == "apps/v1"
        obj.kind == "StatefulSet"
      }

      violation[{"msg": msg}] {
        not data.inventory.cluster["storage.k8s.io/v1"]["StorageClass"]
        msg := sprintf("StorageClasses not synced. Gatekeeper may be misconfigured. Please have a cluster-admin consult the documentation.", [])
      }

      storageclass_allowed(name) {
        data.inventory.cluster["storage.k8s.io/v1"]["StorageClass"][name]
        # support both direct use of * and as the default value
        object.get(input.parameters, "allowedStorageClasses", ["*"])[_] == "*"
      }

      storageclass_allowed(name) {
        data.inventory.cluster["storage.k8s.io/v1"]["StorageClass"][name]
        input.parameters.allowedStorageClasses[_] == name
      }

      violation[{"msg": pvc_storageclass_badname_msg}] {
        is_pvc(input.review.object)
        not storageclass_allowed(input.review.object.spec.storageClassName)
      }
      pvc_storageclass_badname_msg := sprintf("pvc did not specify a valid storage class name <%v>. Must be one of [%v]", args) {
        input.parameters.includeStorageClassesInMessage
        object.get(input.parameters, "allowedStorageClasses", null) == null
        args := [
          input.review.object.spec.storageClassName,
          concat(", ", [n | data.inventory.cluster["storage.k8s.io/v1"]["StorageClass"][n]])
        ]
      } else := sprintf("pvc did not specify an allowed and valid storage class name <%v>. Must be one of [%v]", args) {
        input.parameters.includeStorageClassesInMessage
        object.get(input.parameters, "allowedStorageClasses", null) != null
        sc := {n | data.inventory.cluster["storage.k8s.io/v1"]["StorageClass"][n]} & {x | x = object.get(input.parameters, "allowedStorageClasses", [])[_]}
        args := [
          input.review.object.spec.storageClassName,
          concat(", ", sc)
        ]
      } else := sprintf(
        "pvc did not specify a valid storage class name <%v>.",
        [input.review.object.spec.storageClassName]
      )

      violation[{"msg": pvc_storageclass_noname_msg}] {
        is_pvc(input.review.object)
        not input.review.object.spec.storageClassName
      }
      pvc_storageclass_noname_msg := sprintf("pvc did not specify a storage class name. Must be one of [%v]", args) {
        input.parameters.includeStorageClassesInMessage
        args := [
          concat(", ", [n | data.inventory.cluster["storage.k8s.io/v1"]["StorageClass"][n]])
        ]
      } else := sprintf(
        "pvc did not specify a storage class name.",
        []
      )

      violation[{"msg": statefulset_vct_badname_msg(vct)}] {
        is_statefulset(input.review.object)
        vct := input.review.object.spec.volumeClaimTemplates[_]
        not storageclass_allowed(vct.spec.storageClassName)
      }
      statefulset_vct_badname_msg(vct) := msg {
        input.parameters.includeStorageClassesInMessage
        object.get(input.parameters, "allowedStorageClasses", null) == null
        msg := sprintf(
            "statefulset did not specify a valid storage class name <%v>. Must be one of [%v]", [
            vct.spec.storageClassName,
            concat(", ", [n | data.inventory.cluster["storage.k8s.io/v1"]["StorageClass"][n]])
        ])
      }
      statefulset_vct_badname_msg(vct) := msg {
        input.parameters.includeStorageClassesInMessage
        object.get(input.parameters, "allowedStorageClasses", null) != null
        sc := {n | data.inventory.cluster["storage.k8s.io/v1"]["StorageClass"][n]} & {x | x = object.get(input.parameters, "allowedStorageClasses", [])[_]}
        msg := sprintf(
            "statefulset did not specify an allowed and valid storage class name <%v>. Must be one of [%v]", [
            vct.spec.storageClassName,
            concat(", ", sc)
        ])
      }
      statefulset_vct_badname_msg(vct) := msg {
        not input.parameters.includeStorageClassesInMessage
        msg := sprintf(
          "statefulset did not specify a valid storage class name <%v>.", [
            vct.spec.storageClassName
        ])
      }

      violation[{"msg": statefulset_vct_noname_msg}] {
        is_statefulset(input.review.object)
        vct := input.review.object.spec.volumeClaimTemplates[_]
        not vct.spec.storageClassName
      }
      statefulset_vct_noname_msg := sprintf("statefulset did not specify a storage class name. Must be one of [%v]", args) {
        input.parameters.includeStorageClassesInMessage
        args := [
          concat(", ", [n | data.inventory.cluster["storage.k8s.io/v1"]["StorageClass"][n]])
        ]
      } else := sprintf(
        "statefulset did not specify a storage class name.",
        []
      )
    target: admission.k8s.gatekeeper.sh
status:
  byPod:
  - id: gatekeeper-audit-6b675f5464-424pj
    observedGeneration: 1
    operations:
    - audit
    - status
    templateUID: 3e4289a1-a7fe-497b-af9b-530fea989107
  - id: gatekeeper-controller-manager-5cbccc8474-bj7bq
    observedGeneration: 1
    operations:
    - webhook
    templateUID: 3e4289a1-a7fe-497b-af9b-530fea989107
  created: true
